--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,16 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 html, body {
   background: black;
-  color: #00b800;
+  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: white;
   margin:0;
   padding: 0;
   font-family: 'Press Start 2P', cursive;
   text-align: center;
+  background-image: url('./images/background.png');
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: center; 
+  background-position-y: 1vh;
 }
 
 body {
@@ -31,9 +23,10 @@ button {
   margin: 0 auto;
   border: none;
   background: #a80020;
-  background: #00b800;
+  background: #F7503E;
   padding: 10px 20px;
   text-transform: uppercase;
+  border: 1px solid black
 }
 
 button:disabled {
@@ -47,15 +40,20 @@ h1 {
 
 textarea {
   font-family: 'Press Start 2P', cursive;
-  border: 3px solid black;
-  width: 90%;
+  border: 1px solid black;
+  width: 20%;
   margin: 0 auto;
   outline: none;
-  height: 200px;
-  background: #00b800;
+  height: 150px;
+  background: #F8F7D1;
   padding: 10px;
+  resize: none;
 }
 
 textarea:disabled {
-  background-color: #a5a2a2;
+  background-color: #F0EFCB;
+}
+
+h4 {
+  margin-top: 48px;
 }
